--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
   
     - uses: actions/checkout@v4
     # Building the docker image
-    - run: docker build . -t my-py-app 
+    - run: docker build . -t mohid492/my-py-app:latest
     # Push to docker hub
     - name: Login to Docker Hub
       uses: docker/login-action@v3
