--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -42,3 +42,21 @@ jobs:
     - name: Running Tests with pytest
       run: |
         pytest
+
+  deploy:
+    needs: unit-tests
+    runs-on: ubuntu-latest
+  
+    steps:
+  
+    - uses: actions/checkout@v4
+    # Building the docker image
+    - run: docker build . -t mohid492/my-py-app:latest
+    # Push to docker hub
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push to Docker Hub
+      run: docker push mohid492/my-py-app:latest
